# uars7

./: .editorconfig  .gitignore  .hintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  start-application.sh  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Backend/: extract_pdf.py  extracted_auth.txt  extracted_master.txt  extracted_repos.txt
Backend/uars-platform/: Makefile  PROJECT_STRUCTURE.md  README.md  go.mod  go.sum  start-backend.sh  start-simple.sh
Backend/uars-platform/dev/: docker-compose.yml
Backend/uars-platform/docs/: architecture.md  development.md
Backend/uars-platform/monitoring/: prometheus.yml
Backend/uars-platform/services/adcf/wasm/policy-engine/: Cargo.toml  build.sh
Backend/uars-platform/services/adcf/wasm/policy-engine/src/: lib.rs
chats/: UARS 7.docx  internal_auth_webauth.txt
scripts/: dev-setup.sh
uars7-frontend/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js
uars7-frontend/public/: index.html
uars7-frontend/src/: App.css  App.module.css  App.tsx  index.css  index.tsx  routes.tsx  theme.ts
uars7-frontend/src/components/: CommandPalette.tsx  Footer.module.css  Footer.tsx  Header.tsx  Login.module.css  MiniTabBar.tsx  PrivateRoute.tsx  login.tsx
uars7-frontend/src/contexts/: AuthContext.tsx
uars7-frontend/src/hooks/: useRealTimeChart.tsx  useWebSocket.tsx
uars7-frontend/src/pages/: AdminPanel.tsx  CapsuleAccess.tsx  Dashboard.tsx  DeviceEnrollment.tsx  IntentTokens.tsx  Login.tsx  (+2 more)
(+122 files in other folders)
