[package]
name = "uars-policy-engine"
version = "0.1.0"
edition = "2021"
description = "WASM-based policy engine for UARS ADCF"
license = "MIT"
repository = "https://github.com/uars-platform/adcf"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Performance",
  "Window",
] }

[dependencies.wee_alloc]
version = "0.4.5"
optional = true

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# Enable link-time optimization for smaller WASM size
lto = true
# Enable debug info for better debugging
debug = true

[package.metadata.wasm-pack.profile.release]
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee-alloc = false
